--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "swarm",
   "version": "0.1",
-  "description": "For Just Fun",
+  "description": "Just For Fun",
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -18,7 +18,7 @@
     "persistent": false
   },
   "browser_action": {
-    "default_title": "Play Randome Audio!",
+    "default_title": "Play Random Audio!",
     "default_icon": "media/icon.png"
   }
 }
